test/runnable/extra-files/lib18456b.d
module manual;

class ManualGC {
    void enable()
    {
    }

    void disable()
    {
    }

}
