test/fail_compilation/fail129.d
Ä ä;

class Ä {
}

void main() {
}
